--- a/client/index.html
+++ b/client/index.html
@@ -9,20 +9,28 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
+<body>
     <div class="container" style="padding-top: 50px">
         <div class="row">
-            <div class="col s12 m8 offset-m2 16 offset-13" id="posts">
-
-
-
+            <div class="col s12 m8 offset-m2 16 offset-13  center" id="posts">
+                <div class="preloader-wrapper small active center">
+                    <div class="spinner-layer spinner-green-only">
+                        <div class="circle-clipper left">
+                            <div class="circle"></div>
+                        </div><div class="gap-patch">
+                        <div class="circle"></div>
+                    </div><div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="app.js"></script>
-<body>
+<script src="index.js"></script>
+
 </body>
 </html>
